hphp/hack/test/typecheck/ffp/yield_bad2.php.exp
File "yield_bad2.php", line 5, characters 8-8:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
